--- a/elmo-model/elmo-text-classify.ipynb
+++ b/elmo-model/elmo-text-classify.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7920, 3)\n",
+      "(1953, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "print(train.shape)\n",
     "print(test.shape)"
@@ -38,16 +47,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0.744192\n",
+       "1    0.255808\n",
+       "Name: label, dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train['label'].value_counts(normalize = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,9 +152,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([Dimension(1), Dimension(8), Dimension(1024)])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# just a random sentence\n",
     "x = [\"Roasted ants are a popular snack in Columbia\"]\n",
@@ -145,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,9 +205,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100, 51, 1024)\n",
+      "(100, 41, 1024)\n",
+      "(100, 37, 1024)\n",
+      "(100, 45, 1024)\n",
+      "(100, 39, 1024)\n",
+      "(100, 37, 1024)\n",
+      "(100, 36, 1024)\n",
+      "(100, 53, 1024)\n",
+      "(100, 36, 1024)\n",
+      "(100, 40, 1024)\n",
+      "(100, 45, 1024)\n",
+      "(100, 50, 1024)\n",
+      "(100, 51, 1024)\n",
+      "(100, 50, 1024)\n",
+      "(100, 36, 1024)\n",
+      "(100, 53, 1024)\n",
+      "(100, 39, 1024)\n",
+      "(100, 54, 1024)\n",
+      "(100, 32, 1024)\n",
+      "(100, 40, 1024)\n",
+      "(100, 37, 1024)\n",
+      "(100, 34, 1024)\n",
+      "(100, 53, 1024)\n",
+      "(100, 48, 1024)\n",
+      "(100, 52, 1024)\n",
+      "(100, 32, 1024)\n",
+      "(100, 38, 1024)\n",
+      "(100, 42, 1024)\n",
+      "(100, 42, 1024)\n",
+      "(100, 33, 1024)\n",
+      "(100, 36, 1024)\n",
+      "(100, 36, 1024)\n",
+      "(100, 36, 1024)\n",
+      "(100, 30, 1024)\n",
+      "(100, 40, 1024)\n",
+      "(100, 41, 1024)\n",
+      "(100, 40, 1024)\n",
+      "(100, 36, 1024)\n",
+      "(100, 41, 1024)\n",
+      "(100, 38, 1024)\n",
+      "(100, 35, 1024)\n",
+      "(100, 37, 1024)\n",
+      "(100, 43, 1024)\n",
+      "(100, 40, 1024)\n",
+      "(100, 35, 1024)\n",
+      "(100, 39, 1024)\n",
+      "(100, 36, 1024)\n",
+      "(100, 51, 1024)\n",
+      "(100, 37, 1024)\n",
+      "(100, 41, 1024)\n",
+      "(100, 31, 1024)\n",
+      "(100, 36, 1024)\n",
+      "(100, 41, 1024)\n",
+      "(100, 41, 1024)\n",
+      "(100, 33, 1024)\n",
+      "(100, 39, 1024)\n",
+      "(100, 43, 1024)\n",
+      "(100, 34, 1024)\n",
+      "(100, 36, 1024)\n",
+      "(100, 43, 1024)\n",
+      "(100, 46, 1024)\n",
+      "(100, 35, 1024)\n",
+      "(100, 48, 1024)\n",
+      "(100, 53, 1024)\n",
+      "(100, 36, 1024)\n",
+      "(100, 35, 1024)\n",
+      "(100, 32, 1024)\n",
+      "(100, 45, 1024)\n",
+      "(100, 37, 1024)\n",
+      "(100, 58, 1024)\n",
+      "(100, 43, 1024)\n",
+      "(100, 35, 1024)\n",
+      "(100, 44, 1024)\n",
+      "(100, 45, 1024)\n",
+      "(100, 38, 1024)\n",
+      "(100, 39, 1024)\n",
+      "(100, 40, 1024)\n",
+      "(100, 41, 1024)\n",
+      "(100, 40, 1024)\n",
+      "(20, 27, 1024)\n",
+      "(100, 37, 1024)\n",
+      "(100, 40, 1024)\n",
+      "(100, 41, 1024)\n",
+      "(100, 40, 1024)\n",
+      "(100, 52, 1024)\n",
+      "(100, 46, 1024)\n",
+      "(100, 42, 1024)\n",
+      "(100, 59, 1024)\n",
+      "(100, 42, 1024)\n",
+      "(100, 53, 1024)\n",
+      "(100, 36, 1024)\n",
+      "(100, 30, 1024)\n",
+      "(100, 47, 1024)\n",
+      "(100, 41, 1024)\n",
+      "(100, 31, 1024)\n",
+      "(100, 39, 1024)\n",
+      "(100, 40, 1024)\n",
+      "(100, 38, 1024)\n",
+      "(100, 33, 1024)\n",
+      "(53, 39, 1024)\n"
+     ]
+    }
+   ],
    "source": [
     "# Extract ELMo embeddings\n",
     "elmo_train = [elmo_vectors(x['clean_tweet']) for x in list_train]\n",
@@ -183,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,9 +379,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jozee/miniconda3/envs/python3/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
+       "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
+       "                   random_state=None, solver='warn', tol=0.0001, verbose=0,\n",
+       "                   warm_start=False)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import f1_score\n",
@@ -252,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,16 +424,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7752675386444708"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "f1_score(yvalid, preds_valid)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
